# leda

./: .gitattributes  .gitignore  CONTRIBUTING.md  README.md  check_pkgs.py  justfile  noxfile.py  pyproject.toml  requirements-bundle0.txt  requirements-bundle1.txt  requirements-bundle2.txt  requirements-bundle3.txt  requirements-bundle4.txt  setup.cfg
.github/workflows/: publish.yml  test.yml
demos/: matplotlib_demo.ipynb  plotly_demo.ipynb  simplest_demo.ipynb
examples/input_nbs/: matplotlib_demo.ipynb  plotly_demo.ipynb
examples/output_refs/: basic_demo-static_ipywidgets-test2-lab_narrow-dark.html  basic_demo-static_ipywidgets-test4-classic-light.html  basic_demo-static_ipywidgets-test4-lab-light.html  basic_demo-static_ipywidgets-test4-lab_narrow-dark.html  index.md  plotly_demo-static_ipywidgets-test0.html  plotly_demo-static_ipywidgets-test2-classic-light.html  plotly_demo-static_ipywidgets-test2-lab-light.html  plotly_demo-static_ipywidgets-test2-lab_narrow-dark.html  plotly_demo-static_ipywidgets-test3-classic-light.html  plotly_demo-static_ipywidgets-test3-lab-light.html  plotly_demo-static_ipywidgets-test3-lab_narrow-dark.html  plotly_demo-static_ipywidgets-test4-classic-light.html  plotly_demo-static_ipywidgets-test4-lab-light.html  plotly_demo-static_ipywidgets-test4-lab_narrow-dark.html
leda/: __init__.py  __main__.py
leda/demos/: basic_demo.ipynb  matplotlib_demo.ipynb  plotly_demo.ipynb
leda/integration_tests/: basic_demo-panel-bundle0.html  basic_demo-static_ipywidgets-bundle0.html  integration_test.py  plotly_demo-static_ipywidgets-bundle0.html
leda/interact/: base.py  core.py  dynamic.py  func_gen.py  magics.py  panel.py  params.py  static_ipywidgets.py
leda/interacting/: base.py  core.py  dynamic.py  func_gen.py  helpers.py  magics.py  panel.py  params.py  static_ipywidgets.py
leda/templates/lab_narrow/: index.html.j2
leda/tests/: test_interact_func_gen.py
leda/tests/integration/: plotly_demo-static_ipywidgets-bundle1.html  run_test.py  run_tests.py
leda/tests/integration/refs/: basic_demo-static_ipywidgets-bundle1.html  basic_demo-static_ipywidgets-bundle2-classic-light.html  basic_demo-static_ipywidgets-bundle2.html  basic_demo-static_ipywidgets-bundle3-classic-light.html  basic_demo-static_ipywidgets-bundle3-lab-light.html  basic_demo-static_ipywidgets-bundle3-lab_narrow-dark.html  basic_demo-static_ipywidgets-bundle4-classic-light.html  basic_demo-static_ipywidgets-bundle4-lab-light.html  basic_demo-static_ipywidgets-bundle4-lab_narrow-dark.html  index.html  index.md  plotly_demo-static_ipywidgets-bundle0.html  plotly_demo-static_ipywidgets-bundle1.html  plotly_demo-static_ipywidgets-bundle2-lab-light.html  plotly_demo-static_ipywidgets-bundle2.html  plotly_demo-static_ipywidgets-bundle3-classic-light.html  plotly_demo-static_ipywidgets-bundle3-lab-light.html  plotly_demo-static_ipywidgets-bundle3-lab_narrow-dark.html  plotly_demo-static_ipywidgets-bundle4-classic-light.html  plotly_demo-static_ipywidgets-bundle4-lab-light.html  plotly_demo-static_ipywidgets-bundle4-lab_narrow-dark.html
scripts/: check_pkgs.py  run_ctr.sh
