[metadata]
name = leda
summary = Generate static reports from Jupyter notebooks
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_file = LICENSE
requires_python = >=3.7
keywords =
    reports, Jupyter, notebooks, data visualization
url = https://github.com/ansatzcapital/leda
project_urls =
    Packaging=https://pypi.org/project/leda/
    Source=https://github.com/ansatzcapital/leda
    Tracker=https://github.com/ansatzcapital/leda/issues
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Jupyter
    Framework :: Matplotlib
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries
    Topic :: Scientific/Engineering :: Visualization

[options]
packages = find:
python_requires = >=3.7
install_requires =
    # See also requirements-bundle*.txt. requirements-bundle0 is used as a min constraint.
    ipython >= 7.16.1
    ipywidgets >= 7.5.1
    markdown2 >= 2.3.9
    matplotlib >= 2.2.5
    nbconvert >= 5.6.1
    nbformat >= 5.0.4
    plotly >= 4.6.0
    termcolor >= 1.1.0
    tqdm >= 4.48.2
setup_requires =
    setuptools_scm[toml] >= 4

[options.extras_require]
demos =
    pandas >= 1.0.0
    panel >= 0.14.1
panel =
    panel >= 0.14.1
testing =
    black >= 22.8
    docformatter >= 1.5.0
    flake8 >= 5.0.4
    isort >= 5.2.2
    mypy >= 0.800
    pytest >= 6.2.5
    pytest-cov >=2, <3
#     pyright >= 0.0.13
    tox >= 3.27.1

[flake8]
ignore = E203,E501,W503
max-complexity = 10

[tox:tox]
minversion = 3.7
envlist =
    black
    docformatter
#     flake8
    isort
#     mypy
#     pyright
    py37,py38,py39,py310,py311,pypy3
isolated_build = True

[gh-actions]
python =
    3.7: py37
    3.8: py38, black, docformatter, isort  #, flake8, mypy, pyright
    3.9: py39
    3.10: py310
    3.11: py311
    pypy-3: pypy3

[testenv]
extras = testing
commands = pytest {posargs}

[testenv:black]
extras = testing
commands = black --check leda

[testenv:docformatter]
extras = testing
commands = docformatter -cr leda

[testenv:flake8]
extras = testing
commands = flake8 leda

[testenv:isort]
extras = testing
commands = isort -c leda

[testenv:mypy]
extras = testing
commands = mypy leda --check-untyped-defs

[testenv:pyright]
setenv =
    PYRIGHT_PYTHON_FORCE_VERSION = 1.1.231
extras = testing
commands = pyright leda
