[metadata]
name = leda
summary = Generate static reports from Jupyter notebooks
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
license_files = LICENSE
requires_python = >=3.8
keywords =
    reports, Jupyter, notebooks, data visualization
url = https://github.com/ansatzcapital/leda
project_urls =
    Packaging=https://pypi.org/project/leda/
    Source=https://github.com/ansatzcapital/leda
    Tracker=https://github.com/ansatzcapital/leda/issues
platforms = any
classifiers =
    Development Status :: 5 - Production/Stable
    Framework :: Jupyter
    Framework :: Matplotlib
    Intended Audience :: Developers
    Operating System :: OS Independent
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Topic :: Software Development :: Libraries
    Topic :: Scientific/Engineering :: Visualization

[options]
packages = find:
python_requires = >=3.8
install_requires =
    # See also requirements-bundle*.txt.
    # requirements-bundle0 is used as a min constraint.
    cached-property >= 1.5.2
    ipython >= 7.16.1
    ipywidgets >= 7.5.1
    markdown2 >= 2.3.9
    matplotlib >= 2.2.5
    nbconvert >= 5.6.1
    nbformat >= 5.0.4
    packaging >= 19.0.0
    plotly >= 4.6.0
    termcolor >= 1.1.0
    tqdm >= 4.48.2
    typing_extensions >= 4.4.0
setup_requires =
    setuptools_scm[toml] >= 3.4

[options.extras_require]
demos =
    numpy >= 1.16.0
    pandas >= 1.0.0
    panel >= 0.14.1
panel =
    panel >= 0.14.1
setup =
    build >= 0.6.0
    setuptools_scm[toml] >= 3.4
    wheel >= 0.38.0
test =
    beautifulsoup4 >= 4.11.1
    mypy >= 1.7.1
    nox >= 2023.4.22
    pytest >= 6.2.5
    pytest-cov >=2, <3
    pyright >= 1.1.284
    ruff >= 0.3.0
    types-beautifulsoup4 >= 4.11.1
    types-termcolor >= 1.1.0
    types-tqdm >= 4.48.2

[options.package_data]
* =
    *.tpl
    *.json
    *.html.j2
leda = py.typed
